--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ html, body {
 
     <nav>
        <a href="#home" class="logo-container">
-    <img src="LOGO Supprimer un arrière-plan (1).png" alt="RT CONSEILS Logo" class="main-logo">
+    <img src="logortconseils.png" alt="RT CONSEILS Logo" class="main-logo">
 </a>
         </div>
         <ul class="nav-links">
@@ -407,7 +407,7 @@ html, body {
 
     <section class="dg-section" id="dg">
         <div class="dg-card" data-aos="fade-up">
-            <img src="Dg (2).jpg" alt="M. TAWEDI Robert" class="dg-photo">
+            <img src="dg.jpg" alt="M. TAWEDI Robert" class="dg-photo">
             <div class="dg-info">
                 <h2 style="color: var(--deep-blue); font-size: 2.5rem; margin-bottom: 5px;">M. TAWEDI Robert</h2>
                 <h3 style="color: var(--secondary-color); margin-bottom: 25px;">Directeur Général | Expert Financier</h3>
@@ -438,7 +438,7 @@ html, body {
                     <p>Comptable</p>
                 </div>
                 <div class="member-card">
-                    <div class="member-photo"><img src="patricia 2.jpg" alt=""></div>
+                    <div class="member-photo"><img src="patricia.jpg" alt=""></div>
                     <h4>ADZABA ESSOLO</h4>
                     <p>Comptable</p>
                 </div>
@@ -454,7 +454,7 @@ html, body {
             <h3>Personnel Technique</h3>
             <div class="team-grid">
                 <div class="member-card">
-                    <div class="member-photo"><img src="artur 2.jpg" alt=""></div>
+                    <div class="member-photo"><img src="artur.jpg" alt=""></div>
                     <h4>NDONGMBA Arthur</h4>
                     <p>Directeur Technique</p>
                 </div>
@@ -470,7 +470,7 @@ html, body {
             <h3>Personnel Informatique</h3>
             <div class="team-grid">
                 <div class="member-card">
-                    <div class="member-photo"><img src="PhotoCV.png" alt=""></div>
+                    <div class="member-photo"><img src="Photocv.png" alt=""></div>
                     <h4>JONGELE Annette</h4>
                     <p>Gérante du Système Informatique</p>
                 </div>
@@ -513,7 +513,7 @@ html, body {
 
         <div class="eneo-partnership" id="eneo" data-aos="zoom-in">
             <div class="eneo-logo">
-                <img src="logo eneo.png" alt="Logo ENEO Cameroun">
+                <img src="logoeneo.png" alt="Logo ENEO Cameroun">
             </div>
             <div class="eneo-info">
                 <h3>Partenaire ENEO Cameroun</h3>
@@ -651,7 +651,7 @@ html, body {
     </section>
 
     <footer>
-        <img src="LOGO Supprimer un arrière-plan (1).png" alt="RT CONSEILS Logo" class="main-logo">
+        <img src="logortconseils.png" alt="RT CONSEILS Logo" class="main-logo">
         <!-- <h2 style="color: var(--secondary-color);">RT CONSEILS</h2> -->
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=61586595572442"><i class="fab fa-facebook-f"></i></a>
@@ -754,4 +754,5 @@ window.addEventListener('DOMContentLoaded', () => {
     <i class="fab fa-whatsapp"></i>
 </a>
 </body>
+
 </html>
